[metadata]
name = Grenade
summary = OpenStack Grenade
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
