[metadata]
name = Grenade
summary = OpenStack Grenade
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[wheel]
universal = 1
