[metadata]
name = Grenade
summary = OpenStack Grenade
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
